<resources>
    <string name="app_name">Gits MBKM Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hello">Hello World</string>
    <string name="menu_cek">Cek Format Email</string>
    <string name="menu_waktu">Konversi Waktu</string>
    <string name="menu_reverse">Reverse Kalimat</string>
    <string name="menu_palindrom">Palindrom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>